--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@brainquest" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link rel="icon" type="image/png" href="https://religious-rose-zzjxbzh8ma.edgeone.app/whiteboard.png" />
   </head>
 
   <body>
