--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:site" content="@brainquest" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <link rel="icon" type="image/png" href="https://religious-rose-zzjxbzh8ma.edgeone.app/whiteboard.png" />
+    <link rel="icon" type="image/png" href="https://yeasty-tan-6j9membwdt.edgeone.app/whiteboard.png" />
   </head>
 
   <body>
